Adding resized image caching for Skia. https://bugs.webkit.org/show_bug.cgi?id=39085

Patch by Sergey Ulanov <sergeyu@chromium.org> on 2010-05-14
Reviewed by Dmitry Titov and Brett Wilson.

Tests: HTML5 video on YouTube.

* platform/graphics/skia/ImageSkia.cpp:
(WebCore::Image::drawPattern): Use bitmap->resizedBitmap() to cache resized image when possible.

Canonical link: https://commits.webkit.org/50641@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@59487 268f45cc-cd09-0410-ab3c-d52691b4dbfc